infrastructure-ec2/main.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_key_pair" "deployer" {
  key_name   = "deployer-key"
  public_key = file("~/.ssh/id_rsa.pub")
}

resource "aws_instance" "web" {
  count                  = 3
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = var.instance_type
  key_name               = aws_key_pair.deployer.key_name
  vpc_security_group_ids = [aws_security_group.allow_access.id]

  tags = {
    Name = var.instance_name[count.index]
  }

}

module "web_provisioner" {
   source    = "github.com/cloudposse/tf_ansible"

   arguments = ["--user=ubuntu"]
   envs      = ["host=${aws_instance.web[0].public_ip}"]
   playbook  = "../ansible/playbook.yaml"
   dry_run   = false
}
